[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
dotenvy = "0.15"
anyhow = "1.0"
solana-client = "3.1.5"
tracing = "0.1"
redis = { version = "0.24", features = ["tokio-comp"] }
url = "2.5.0"